--- a/projeto-de-vida/html/meus-planos.html
+++ b/projeto-de-vida/html/meus-planos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styleplanos.css">
+    <link rel="stylesheet" href="../css/styleplanos.css">
     <title>Meus Planos</title>
 </head>
 <body>
