--- a/projeto-de-vida/html/minha-visao.html
+++ b/projeto-de-vida/html/minha-visao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Visão</title>
-    <link rel="stylesheet" href="/css/stylevisao.css">
+    <link rel="stylesheet" href="../css/stylevisao.css">
 </head>
 <body>
     <div class="container">
