--- a/projeto-de-vida/html/recursos.html
+++ b/projeto-de-vida/html/recursos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recursos e Inspirações</title>
-    <link rel="stylesheet" href="/css/stylerecursos.css">
+    <link rel="stylesheet" href="../css/stylerecursos.css">
 </head>
 <body>
     <div class="container">
